--- a/libtest/todo.txt
+++ b/libtest/todo.txt
@@ -20,3 +20,24 @@ pipeline.start(config)
 3.
         depth_frame = frames.get_depth_frame()
         color_frame = frames.get_color_frame()
+        
+        
+-----------------------
+my
+1. 
+        frames = self.pipeline.wait_for_frames()
+        depth_frame = frames.get_depth_frame()
+        color_frame = frames.get_color_frame()
+
+        depth_image = np.asanyarray(depth_frame.get_data())
+        color_image = np.asanyarray(color_frame.get_data())
+        
+        
+------------
+2
+        frames = self.pipeline.wait_for_frames()
+        depth_frame = frames.get_depth_frame()
+        color_frame = frames.get_color_frame()
+
+        depth_image = np.asanyarray(depth_frame.get_data())
+        color_image = np.asanyarray(color_frame.get_data())
