--- a/libtest/todo.txt
+++ b/libtest/todo.txt
@@ -35,9 +35,4 @@ my
         
 ------------
 2
-        frames = self.pipeline.wait_for_frames()
-        depth_frame = frames.get_depth_frame()
-        color_frame = frames.get_color_frame()
-
-        depth_image = np.asanyarray(depth_frame.get_data())
-        color_image = np.asanyarray(color_frame.get_data())
+        dc = DepthCamera()
